tests/mytests/error/aff_error.vsl
INT test
test1 := 4
